hphp/hack/test/typecheck/const_static_properties/const_static_simple.php.exp
File "const_static_simple.php", line 4, characters 3-7:
Constants cannot be declared static (Parsing[1002])
