hphp/hack/test/typecheck/const_static_properties/const_static_simple.php
<?hh

class A {
  static const int MAX_ARGS = 5;
}
